# testat

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker_build_run.sh  hide_old_cards.sql  init_db.py  init_db.sh  logging.conf  manage_projects.py  manage_user.py  mqtt_pub_status.sh  pyproject.toml  schema.sql  server_update.sh  start_devserver.sh  start_prodserver.sh  testate.py  utils.py
templates/: admin.html  admin_cards_table.html  base.html  card_create.html  card_edit.html  cards_add_content_form.html  cards_create.html  cards_show.html  index.html  login.html
