[tool.poetry]
name = "testate"
version = "1.0.0"
description = ""
authors = ["Marco Bakera <marco@bakera.de>"]

[tool.poetry.dependencies]
python = "^3.7"
# https://flask.palletsprojects.com/en/2.2.x/changes/
Flask = "^2.2.2"
# https://docs.gunicorn.org/en/stable/news.html
gunicorn = "^20.1.0"
# https://flask-sqlalchemy.palletsprojects.com/en/3.0.x/changes/
Flask-SQLAlchemy = "^3.0.0"
# https://github.com/theskumar/python-dotenv/blob/master/CHANGELOG.md
python-dotenv = "^0.21.0"
# https://github.com/maxcountryman/flask-login/blob/main/CHANGES.md
Flask-Login = "^0.6.0"
# https://gitpython.readthedocs.io/en/stable/changes.html
GitPython = "^3.1.27"
# https://openpyxl.readthedocs.io/en/stable/changes.html
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
