[tool.poetry]
name = "testate"
version = "1.0.0"
description = ""
authors = ["Marco Bakera <marco@bakera.de>"]

[tool.poetry.dependencies]
python = "^3.11"
# https://flask.palletsprojects.com/en/stable/changes/
flask = "^3.1.0"
# https://docs.gunicorn.org/en/stable/news.html
gunicorn = "^22.0.0"
# https://flask-sqlalchemy.palletsprojects.com/en/3.0.x/changes/
flask-sqlalchemy = "^3.1.1"
# https://github.com/theskumar/python-dotenv/blob/master/CHANGELOG.md
python-dotenv = "^0.21.0"
# https://github.com/maxcountryman/flask-login/blob/main/CHANGES.md
flask-login = "^0.6.3"
# https://gitpython.readthedocs.io/en/stable/changes.html
GitPython = "^3.1.27"
# https://openpyxl.readthedocs.io/en/stable/changes.html
openpyxl = "^3.1.5"
# OAuthentication support
flask-dance = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.2"
# adhoc ssl support
pyOpenSSL = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
