[tool.poetry]
name = "testate"
version = "1.0.0"
description = ""
authors = ["Marco Bakera <marco@bakera.de>"]

[tool.poetry.dependencies]
python = "^3.11"
# https://flask.palletsprojects.com/en/2.2.x/changes/
Flask = "^3.1.2"
# https://docs.gunicorn.org/en/stable/news.html
gunicorn = "^23.0.0"
# https://flask-sqlalchemy.palletsprojects.com/en/3.0.x/changes/
Flask-SQLAlchemy = "^3.0.0"
# https://github.com/theskumar/python-dotenv/blob/master/CHANGELOG.md
python-dotenv = "^1.1.1"
# https://github.com/maxcountryman/flask-login/blob/main/CHANGES.md
Flask-Login = "^0.6.0"
# https://openpyxl.readthedocs.io/en/stable/changes.html
openpyxl = "^3.0.9"
# OAuthentication support
# TODO Prüfen, ob durch https://oauth2-proxy.github.io/oauth2-proxy/ ersetzbar.
Flask-Dance = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.2"
# adhoc ssl support
pyOpenSSL = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
